[package]
name = "conn2db"
version = "0.1.0"
authors = ["Daniel <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
dotenv = "0.15"
env_logger = "0.7"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json = "0.12"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1", features = ["postgres", "mysql", "r2d2", "chrono"] }
r2d2_postgres = {version = "0.16"}
postgres-shared = {version = "0.4"}
postgres = {version = "0.17"}
